# codex-auditor

./: .TASK.md  .gitignore  AGENTS.md  Dockerfile  README.md
codex-data/: filebrowser.db
codex-data/codex/: config.toml
codex-data/workspace/manager/: README.md  config.json  manager.py
codex-data/workspace/manager/state/: queue.sqlite
codex-data/workspace/templates/: bugs.md  confirm.md  init.md
codex-data/workspace/templates/code_browser/: README.md  query.py
codex-data/workspace/templates/report_template/: candidate.json  report.md  repro.sh
codex-data/workspace/templates/verify/: verify.py
configs/: nginx.conf  supervisord.conf
skills/bug-confirming/: SKILL.md
skills/bug-confirming/agents/: openai.yaml
skills/bug-hunting/: SKILL.md
skills/bug-hunting/agents/: openai.yaml
skills/overall-report-skill/: SKILL.md
skills/overall-report-skill/agents/: openai.yaml
skills/overall-report-skill/scripts/: overall_md_to_json.py
webui/: app.py  pyproject.toml
webui/auditor_webui/: __init__.py  codex_runner.py  config.py  database.py  prompts.py  schema.py  vulnerabilities.py  web.py  workspace.py
webui/manager/: README.md  manager.py
webui/static/: app.css  app.js  index.html
webui/templates/: bugs.md  confirm.md  init.md
webui/templates/archives/: known_fails.md  known_findings.md
webui/templates/code_browser/: README.md  build_index.py  query.py  schema.sql  test_code_browser_usability.py
webui/templates/report_template/: notes.md
webui/templates/verify/: README.md
