[project]
name = "codex-auditor-webui"
version = "0.1.0"
description = "Flask WebUI for codex-auditor automation."
requires-python = ">=3.14"
dependencies = [
    "Flask>=3.1",
    "gunicorn>=26",
]

[tool.pyright]
pythonVersion = "3.14"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "COM",
    "E",
    "F",
    "FURB",
    "I",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.14"
strict = true
